tests/snapshots/snapshots__budget_once_cell_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (990 words)

CHANGELOG.md
     3→## 1.21.3
     5→- Outline more initialization in `race`: [#284](https://github.com/matklad/once_cell/pull/284),
     6→  [#285](https://github.com/matklad/once_cell/pull/285).
     7→
README.md
     8→# Overview
    10→`once_cell` provides two new cell-like types, `unsync::OnceCell` and `sync::OnceCell`. `OnceCell`
    11→might store arbitrary non-`Copy` types, can be assigned to at most once and provide direct access
    12→to the stored contents. In a nutshell, API looks *roughly* like this:
    13→
    14→```rust
    15→impl OnceCell<T> {
    16→    fn new() -> OnceCell<T> { ... }
    17→    fn set(&self, value: T) -> Result<(), T> { ... }
    18→    fn get(&self) -> Option<&T> { ... }
    19→}
    20→```
    21→
    22→Note that, like with `RefCell` and `Mutex`, the `set` method requires only a shared reference.
    23→Because of the single assignment restriction `get` can return an `&T` instead of `Ref<T>`
    24→or `MutexGuard<T>`.
    25→
    26→`once_cell` also has a `Lazy<T>` type, build on top of `OnceCell` which provides the same API as
    27→the `lazy_static!` macro, but without using any macros:
    28→
    29→```rust
    30→use std::{sync::Mutex, collections::HashMap};
    31→use once_cell::sync::Lazy;
    32→
    33→static GLOBAL_DATA: Lazy<Mutex<HashMap<i32, String>>> = Lazy::new(|| {
    34→    let mut m = HashMap::new();
    35→    m.insert(13, "Spica".to_string());
    36→    m.insert(74, "Hoyten".to_string());
    37→    Mutex::new(m)
    38→});
    39→
    40→fn main() {
    41→    println!("{:?}", GLOBAL_DATA.lock().unwrap());
    42→}
    43→```
    44→
      →…
    47→# Related crates
    49→* [double-checked-cell](https://github.com/niklasf/double-checked-cell)
    50→* [lazy-init](https://crates.io/crates/lazy-init)
    51→* [lazycell](https://crates.io/crates/lazycell)
    52→* [mitochondria](https://crates.io/crates/mitochondria)
    53→* [lazy_static](https://crates.io/crates/lazy_static)
    54→* [async_once_cell](https://crates.io/crates/async_once_cell)
    55→* [generic_once_cell](https://crates.io/crates/generic_once_cell) (bring your own mutex)
    56→
    57→Parts of `once_cell` API are included into `std` [as of Rust 1.70.0](https://github.com/rust-lang/rust/pull/105587).
src/imp_cs.rs
     8→pub(crate) struct OnceCell<T> {
     9→    initialized: AtomicBool,
    10→    // Use `unsync::OnceCell` internally since `Mutex` does not provide
    11→    // interior mutability and to be able to re-use `get_or_try_init`.
    12→    value: Mutex<unsync::OnceCell<T>>,
    13→}
src/imp_pl.rs
     7→pub(crate) struct OnceCell<T> {
     8→    state: AtomicU8,
     9→    value: UnsafeCell<Option<T>>,
    10→}
    12→const INCOMPLETE: u8 = 0x0;
    13→const RUNNING: u8 = 0x1;
    14→const COMPLETE: u8 = 0x2;
   122→struct Guard<'a> {
   123→    state: &'a AtomicU8,
   124→    new_state: u8,
   125→}
   139→fn initialize_inner …
src/imp_std.rs
    13→#[derive(Debug)]
    14→pub(crate) struct OnceCell<T> {
    15→    // This `queue` field is the core of the implementation. It encodes two
    16→    // pieces of information:
    17→    //
    18→    // * The current state of the cell (`INCOMPLETE`, `RUNNING`, `COMPLETE`)
    19→    // * Linked list of threads waiting for the current cell.
    20→    //
    21→    // State is encoded in two low bits. Only `INCOMPLETE` and `RUNNING` states
    22→    // allow waiters.
    23→    queue: AtomicPtr<Waiter>,
    24→    value: UnsafeCell<Option<T>>,
    25→}
   125→const INCOMPLETE: usize = 0x0;
   126→const RUNNING: usize = 0x1;
   127→const COMPLETE: usize = 0x2;
   128→const INCOMPLETE_PTR: *mut Waiter = INCOMPLETE as *mut Waiter;
   129→const COMPLETE_PTR: *mut Waiter = COMPLETE as *mut Waiter;
   133→const STATE_MASK: usize = 0x3;
   135→/// Representation of a node in the linked list of waiters in the RUNNING state.
   136→/// A waiters is stored on the stack of the waiting threads.
      →…
   138→struct Waiter {
   139→    thread: Cell<Option<Thread>>,
   140→    signaled: AtomicBool,
   141→    next: *mut Waiter,
   142→}
   144→/// Drains and notifies the queue of waiters on drop.
   145→struct Guard<'a> {
   146→    queue: &'a AtomicPtr<Waiter>,
   147→    new_queue: *mut Waiter,
   148→}
   177→fn initialize_or_wait …
   210→fn wait(queue: &AtomicPtr<Waiter>, mut curr_queue: *mut Waiter) {
   211→    let curr_state = strict::addr(curr_queue) & STATE_MASK;
   212→    loop {
      →…
   245→mod strict {
   246→    #[must_use]
   247→    #[inline]
src/lib.rs
   370→#[cfg(all(feature = "critical-section", not(feature = "std")))]
   371→#[path = "imp_cs.rs"]
   372→mod imp;
   374→#[cfg(all(feature = "std", feature = "parking_lot"))]
   375→#[path = "imp_pl.rs"]
   376→mod imp;
   378→#[cfg(all(feature = "std", not(feature = "parking_lot")))]
   379→#[path = "imp_std.rs"]
   380→mod imp;
   382→/// Single-threaded version of `OnceCell`.
   383→pub mod unsync {
   384→    use core::{
   385→        cell::{Cell, UnsafeCell},
   386→        fmt, mem,
   387→        ops::{Deref, DerefMut},
   388→        panic::{RefUnwindSafe, UnwindSafe},
   389→    };
   390→
   391→    /// A cell which can be written to only once. It is not thread safe.
   392→    ///
   393→    /// Unlike [`std::cell::RefCell`], a `OnceCell` provides simple `&`
   394→    /// references to the contents.
   395→    ///
      →…
   411→    pub struct OnceCell<T> {
   412→        // Invariant: written to at most once.
   413→        inner: UnsafeCell<Option<T>>,
   414→    }
   694→    /// A value which is initialized on the first access.
   695→    ///
   696→    /// # Example
   697→    /// ```
   698→    /// use once_cell::unsync::Lazy;
      →…
   714→    pub struct Lazy<T, F = fn() -> T> {
   715→        cell: OnceCell<T>,
   716→        init: Cell<Option<F>>,
   717→    }
   841→        type Target = T;
   861→/// Thread-safe, blocking version of `OnceCell`.
   862→#[cfg(any(feature = "std", feature = "critical-section"))]
   863→pub mod sync {
   864→    use core::{
   865→        cell::Cell,
   866→        fmt, mem,
   867→        ops::{Deref, DerefMut},
   868→        panic::RefUnwindSafe,
   869→    };
   870→
   873→    /// A thread-safe cell which can be written to only once.
   874→    ///
   875→    /// `OnceCell` provides `&` references to the contents without RAII guards.
   876→    ///
   877→    /// Reading a non-`None` value out of `OnceCell` establishes a
      →…
   901→    pub struct OnceCell<T>(Imp<T>);
  1222→    /// A value which is initialized on the first access.
  1223→    ///
  1224→    /// This type is thread-safe and can be used in statics.
  1225→    ///
  1226→    /// # Example
      →…
  1255→    pub struct Lazy<T, F = fn() -> T> {
  1256→        cell: OnceCell<T>,
  1257→        init: Cell<Option<F>>,
  1258→    }
  1374→        type Target = T;
  1408→    fn _dummy …
  1411→#[cfg(feature = "race")]
  1412→pub mod race;
src/race.rs
    41→/// A thread-safe cell which can be written to only once.
    42→#[derive(Default, Debug)]
    43→pub struct OnceNonZeroUsize {
    44→    inner: AtomicUsize,
    45→}
   150→    fn init …
   160→    fn compare_exchange …
   165→/// A thread-safe cell which can be written to only once.
   166→#[derive(Default, Debug)]
   167→pub struct OnceBool {
   168→    inner: OnceNonZeroUsize,
   169→}
   221→    fn from_usize …
   226→    fn to_usize …
   231→/// A thread-safe cell which can be written to only once.
   232→pub struct OnceRef<'a, T> {
   233→    inner: AtomicPtr<T>,
   234→    ghost: PhantomData<UnsafeCell<&'a T>>,
   235→}
   311→    fn init …
   320→    fn compare_exchange …
   347→    fn _dummy …
   353→#[cfg(feature = "alloc")]
   354→mod once_box {
   355→    use super::atomic::{AtomicPtr, Ordering};
   356→    use core::{marker::PhantomData, ptr};
   357→
   358→    use alloc::boxed::Box;
   359→
   360→    /// A thread-safe cell which can be written to only once.
   361→    pub struct OnceBox<T> {
   362→        inner: AtomicPtr<T>,
   363→        ghost: PhantomData<Option<Box<T>>>,
   364→    }
   462→        fn init …
   497→    fn _dummy …
xtask/src/main.rs
     8→fn main() -> xshell::Result<()> {
   116→fn push_toolchain<'a>(
   117→    sh: &'a xshell::Shell,
   118→    toolchain: &str,
   119→) -> xshell::Result<xshell::PushEnv<'a>> {
   126→fn section(name: &'static str) -> impl Drop {
   136→fn defer<F: FnOnce()>(f: F) -> impl Drop {
