tests/snapshots/snapshots__budget_once_cell_2000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 (2011 tokens)

CHANGELOG.md
     1→# Changelog

Cargo.toml
     1→[package]
    19→[workspace]
    22→[dependencies]
    27→[dev-dependencies]
    31→[features]
    66→[[example]]
    70→[[example]]
    74→[[example]]
    78→[[example]]
    82→[[example]]
    86→[[example]]
    90→[package.metadata.docs.rs]

README.md
     8→# Overview
    10→`once_cell` provides two new cell-like types, `unsync::OnceCell` and `sync::OnceCell`. `OnceCell`
      →…
    47→# Related crates
    49→* [double-checked-cell](https://github.com/niklasf/double-checked-cell)
      →…

examples/bench_acquire.rs
    14→fn main() {
    26→fn thread_main(i: usize) {

examples/regex.rs
     5→macro_rules! regex {

src/imp_cs.rs
     1→use core::panic::{RefUnwindSafe, UnwindSafe};
     3→use critical_section::{CriticalSection, Mutex};
     4→use portable_atomic::{AtomicBool, Ordering};
     6→use crate::unsync;
     8→pub(crate) struct OnceCell<T> {
    27→    pub(crate) const fn new() -> OnceCell<T> {
    31→    pub(crate) const fn with_value(value: T) -> OnceCell<T> {
    39→    pub(crate) fn is_initialized …
    44→    pub(crate) fn initialize …
    63→    pub(crate) unsafe fn get_unchecked …
    70→    pub(crate) fn get_mut …
    75→    pub(crate) fn into_inner …

src/imp_pl.rs
     1→use std::{ …
     7→pub(crate) struct OnceCell<T> {
    12→const INCOMPLETE: u8 = 0x0;
    13→const RUNNING: u8 = 0x1;
    14→const COMPLETE: u8 = 0x2;
    28→    pub(crate) const fn new() -> OnceCell<T> {
    32→    pub(crate) const fn with_value(value: T) -> OnceCell<T> {
    38→    pub(crate) fn is_initialized …
    45→    pub(crate) fn initialize …
    80→    pub(crate) fn wait …
   101→    pub(crate) unsafe fn get_unchecked …
   109→    pub(crate) fn get_mut …
   117→    pub(crate) fn into_inner …
   122→struct Guard<'a> {
   128→    fn drop(&mut self) {
   129→        self.state.store(self.new_state, Ordering::Release);
   130→        unsafe {
      →        …
   139→fn initialize_inner …

src/imp_std.rs
     6→use std::{ …
    14→pub(crate) struct OnceCell<T> {
    39→    pub(crate) const fn new …
    43→    pub(crate) const fn with_value …
   138→struct Waiter {
   145→struct Guard<'a> {
   151→    fn drop(&mut self) {
   152→        let queue = self.queue.swap(self.new_queue, Ordering::AcqRel);
   153→
      →…
   210→fn wait …
   245→mod strict {

src/lib.rs
   372→mod imp;
   376→mod imp;
   380→mod imp;
   382→/// Single-threaded version of `OnceCell`.
   383→pub mod unsync {
   384→    use core::{ …
   391→    /// A cell which can be written to only once. It is not thread safe.
   392→    ///
      →    …
   411→    pub struct OnceCell<T> {
   412→        // Invariant: written to at most once.
   413→        inner: UnsafeCell<Option<T>>,
   414→    }
   694→    /// A value which is initialized on the first access.
   695→    ///
      →    …
   714→    pub struct Lazy<T, F = fn() -> T> {
   715→        cell: OnceCell<T>,
   716→        init: Cell<Option<F>>,
   717→    }
   841→        type Target = T;
   861→/// Thread-safe, blocking version of `OnceCell`.
   862→#[cfg(any(feature = "std", feature = "critical-section"))]
   863→pub mod sync {
   864→    use core::{ …
   871→    use super::imp::OnceCell as Imp;
   873→    /// A thread-safe cell which can be written to only once.
   874→    ///
      →    …
   901→    pub struct OnceCell<T>(Imp<T>);
  1222→    /// A value which is initialized on the first access.
  1223→    ///
      →    …
  1255→    pub struct Lazy<T, F = fn() -> T> {
  1256→        cell: OnceCell<T>,
  1257→        init: Cell<Option<F>>,
  1258→    }
  1374→        type Target = T;
  1408→    fn _dummy() {}
  1411→#[cfg(feature = "race")]
  1412→pub mod race;

src/race.rs
    31→use core::sync::atomic;
    33→use portable_atomic as atomic;
    41→/// A thread-safe cell which can be written to only once.
    42→#[derive(Default, Debug)]
    43→pub struct OnceNonZeroUsize {
    44→    inner: AtomicUsize,
    45→}
    50→    pub const fn new …
    56→    pub fn get …
    68→    pub unsafe fn get_unchecked …
   107→    pub fn set …
   120→    pub fn get_or_init …
   138→    pub fn get_or_try_init …
   165→/// A thread-safe cell which can be written to only once.
   166→#[derive(Default, Debug)]
   167→pub struct OnceBool {
   168→    inner: OnceNonZeroUsize,
   169→}
   174→    pub const fn new …
   180→    pub fn get …
   189→    pub fn set …
   199→    pub fn get_or_init …
   213→    pub fn get_or_try_init …
   231→/// A thread-safe cell which can be written to only once.
   232→pub struct OnceRef<'a, T> {
   233→    inner: AtomicPtr<T>,
   234→    ghost: PhantomData<UnsafeCell<&'a T>>,
   235→}
   241→    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result {
   247→    fn default() -> Self {
   254→    pub const fn new …
   259→    pub fn get …
   268→    pub fn set …
   281→    pub fn get_or_init …
   299→    pub fn get_or_try_init …
   351→pub use self::once_box::OnceBox;
   354→mod once_box {
   355→    use super::atomic::{AtomicPtr, Ordering};
   360→    /// A thread-safe cell which can be written to only once.
   361→    pub struct OnceBox<T> {
   362→        inner: AtomicPtr<T>,
   363→        ghost: PhantomData<Option<Box<T>>>,
   364→    }
   367→        fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result {
   373→        fn default() -> Self {
   379→        fn drop(&mut self) {
   389→        pub const fn new …
   394→        pub fn with_value …
   399→        pub fn get …
   411→        pub fn set …
   432→        pub fn get_or_init …
   450→        pub fn get_or_try_init …
   482→        fn clone(&self) -> Self {

tests/it/race_once_box.rs
     2→use std::sync::Barrier;
    11→struct Heap {
    16→struct Pebble<T> {
    22→    fn drop(&mut self) {

tests/it/sync_once_cell.rs
   181→fn reentrant_init() {

xtask/Cargo.toml
     1→[package]
     8→[dependencies]

xtask/src/main.rs
     4→use std::time::Instant;
     6→use xshell::{cmd, Shell};
     8→fn main …
   116→fn push_toolchain …
   126→fn section …
   136→fn defer …

xtask/src/tidy.rs
     1→use xshell::{cmd, Shell};
