tests/snapshots/snapshots__budget_once_cell_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (4013 tokens)

CHANGELOG.md
     1→# Changelog

Cargo.toml
     1→[package]
    19→[workspace]
    22→[dependencies]
    27→[dev-dependencies]
    31→[features]
    66→[[example]]
    70→[[example]]
    74→[[example]]
    78→[[example]]
    82→[[example]]
    86→[[example]]
    90→[package.metadata.docs.rs]

README.md
     8→# Overview
    10→`once_cell` provides two new cell-like types, `unsync::OnceCell` and `sync::OnceCell`. `OnceCell`
    11→might store arbitrary non-`Copy` types, can be assigned to at most once and provide direct access
    12→to the stored contents. In a nutshell, API looks *roughly* like this:
    13→
    14→```rust
      →…
    47→# Related crates
    49→* [double-checked-cell](https://github.com/niklasf/double-checked-cell)
    50→* [lazy-init](https://crates.io/crates/lazy-init)
    51→* [lazycell](https://crates.io/crates/lazycell)
    52→* [mitochondria](https://crates.io/crates/mitochondria)
    53→* [lazy_static](https://crates.io/crates/lazy_static)
      →…

examples/bench.rs
    10→fn main() {
    23→fn thread_main(i: usize) {

examples/bench_acquire.rs
    14→fn main() {
    26→fn thread_main(i: usize) {

examples/lazy_static.rs
     6→static HASHMAP …
    15→fn hashmap …
    26→fn main …

examples/reentrant_init_deadlocks.rs
     1→fn main() {

examples/regex.rs
     5→macro_rules! regex {
    12→fn slow() {
    27→fn fast() {
    41→fn main() {

examples/test_synchronization.rs
    10→use once_cell::sync::OnceCell;
    18→fn main() {
    30→fn thread_main(i: usize) {

src/imp_cs.rs
     1→use core::panic::{RefUnwindSafe, UnwindSafe};
     3→use critical_section::{CriticalSection, Mutex};
     4→use portable_atomic::{AtomicBool, Ordering};
     6→use crate::unsync;
     8→pub(crate) struct OnceCell<T> {
    20→unsafe impl<T: Sync + Send> Sync for OnceCell<T> {}
    21→unsafe impl<T: Send> Send for OnceCell<T> {}
    23→impl<T: RefUnwindSafe + UnwindSafe> RefUnwindSafe for OnceCell<T> {}
    24→impl<T: UnwindSafe> UnwindSafe for OnceCell<T> {}
    26→impl<T> OnceCell<T> {
    27→    pub(crate) const fn new() -> OnceCell<T> {
    31→    pub(crate) const fn with_value(value: T) -> OnceCell<T> {
    39→    pub(crate) fn is_initialized(&self) -> bool {
    44→    pub(crate) fn initialize<F, E>(&self, f: F) -> Result<(), E>
    45→    where
    46→        F: FnOnce() -> Result<T, E>,
    47→    {
    63→    pub(crate) unsafe fn get_unchecked(&self) -> &T {
    70→    pub(crate) fn get_mut(&mut self) -> Option<&mut T> {
    75→    pub(crate) fn into_inner(self) -> Option<T> {

src/imp_pl.rs
     1→use std::{ …
     7→pub(crate) struct OnceCell<T> {
    12→const INCOMPLETE: u8 = 0x0;
    13→const RUNNING: u8 = 0x1;
    14→const COMPLETE: u8 = 0x2;
    21→unsafe impl<T: Sync + Send> Sync for OnceCell<T> {}
    22→unsafe impl<T: Send> Send for OnceCell<T> {}
    24→impl<T: RefUnwindSafe + UnwindSafe> RefUnwindSafe for OnceCell<T> {}
    25→impl<T: UnwindSafe> UnwindSafe for OnceCell<T> {}
    27→impl<T> OnceCell<T> {
    28→    pub(crate) const fn new() -> OnceCell<T> {
    32→    pub(crate) const fn with_value(value: T) -> OnceCell<T> {
    38→    pub(crate) fn is_initialized(&self) -> bool {
    45→    pub(crate) fn initialize<F, E>(&self, f: F) -> Result<(), E>
    46→    where
    47→        F: FnOnce() -> Result<T, E>,
    48→    {
    80→    pub(crate) fn wait(&self) {
   101→    pub(crate) unsafe fn get_unchecked(&self) -> &T {
   109→    pub(crate) fn get_mut(&mut self) -> Option<&mut T> {
   117→    pub(crate) fn into_inner(self) -> Option<T> {
   122→struct Guard<'a> {
   127→impl<'a> Drop for Guard<'a> {
   128→    fn drop(&mut self) {
   129→        self.state.store(self.new_state, Ordering::Release);
   130→        unsafe {
   131→            let key = self.state as *const AtomicU8 as usize;
   132→            parking_lot_core::unpark_all(key, parking_lot_core::DEFAULT_UNPARK_TOKEN);
   133→        }
   134→    }
   139→fn initialize_inner(state: &AtomicU8, init: &mut dyn FnMut() -> bool) {

src/imp_std.rs
     6→use std::{ …
    14→pub(crate) struct OnceCell<T> {
    32→unsafe impl<T: Sync + Send> Sync for OnceCell<T> {}
    33→unsafe impl<T: Send> Send for OnceCell<T> {}
    35→impl<T: RefUnwindSafe + UnwindSafe> RefUnwindSafe for OnceCell<T> {}
    36→impl<T: UnwindSafe> UnwindSafe for OnceCell<T> {}
    38→impl<T> OnceCell<T> {
    39→    pub(crate) const fn new() -> OnceCell<T> {
    43→    pub(crate) const fn with_value(value: T) -> OnceCell<T> {
    49→    pub(crate) fn is_initialized …
    61→    pub(crate) fn initialize …
    88→    pub(crate) fn wait …
    99→    pub(crate) unsafe fn get_unchecked …
   107→    pub(crate) fn get_mut …
   115→    pub(crate) fn into_inner …
   125→const INCOMPLETE: usize = 0x0;
   126→const RUNNING: usize = 0x1;
   127→const COMPLETE: usize = 0x2;
   128→const INCOMPLETE_PTR: *mut Waiter = INCOMPLETE as *mut Waiter;
   129→const COMPLETE_PTR: *mut Waiter = COMPLETE as *mut Waiter;
   133→const STATE_MASK: usize = 0x3;
   138→struct Waiter {
   145→struct Guard<'a> {
   150→impl Drop for Guard<'_> {
   151→    fn drop(&mut self) {
   152→        let queue = self.queue.swap(self.new_queue, Ordering::AcqRel);
   153→
   154→        let state = strict::addr(queue) & STATE_MASK;
   155→        assert_eq!(state, RUNNING);
   156→
   157→        unsafe {
      →        …
   177→fn initialize_or_wait …
   210→fn wait(queue: &AtomicPtr<Waiter>, mut curr_queue: *mut Waiter) {
   245→mod strict {
   248→    pub(crate) fn addr …
   260→    pub(crate) fn with_addr …
   281→    pub(crate) fn map_addr …

src/lib.rs
   372→mod imp;
   376→mod imp;
   380→mod imp;
   382→/// Single-threaded version of `OnceCell`.
   383→pub mod unsync {
   384→    use core::{ …
   391→    /// A cell which can be written to only once. It is not thread safe.
   392→    ///
   393→    /// Unlike [`std::cell::RefCell`], a `OnceCell` provides simple `&`
   394→    /// references to the contents.
      →    …
   411→    pub struct OnceCell<T> {
   412→        // Invariant: written to at most once.
   413→        inner: UnsafeCell<Option<T>>,
   414→    }
   424→        fn default …
   430→        fn fmt …
   439→        fn clone …
   446→        fn clone_from …
   455→        fn eq …
   463→        fn from …
   470→        pub const fn new …
   475→        pub const fn with_value …
   483→        pub fn get …
   508→        pub fn get_mut …
   530→        pub fn set …
   551→        pub fn try_insert …
   586→        pub fn get_or_init …
   622→        pub fn get_or_try_init …
   667→        pub fn take …
   687→        pub fn into_inner …
   694→    /// A value which is initialized on the first access.
   695→    ///
   696→    /// # Example
   697→    /// ```
      →    …
   714→    pub struct Lazy<T, F = fn() -> T> {
   715→        cell: OnceCell<T>,
   716→        init: Cell<Option<F>>,
   717→    }
   722→        fn fmt …
   742→        pub const fn new …
   749→        pub fn into_value …
   773→        pub fn force …
   794→        pub fn force_mut …
   818→        pub fn get …
   835→        pub fn get_mut …
   841→        type Target = T;
   842→        fn deref …
   848→        fn deref_mut …
   855→        fn default …
   861→/// Thread-safe, blocking version of `OnceCell`.
   862→#[cfg(any(feature = "std", feature = "critical-section"))]
   863→pub mod sync {
   864→    use core::{ …
   871→    use super::imp::OnceCell as Imp;
   873→    /// A thread-safe cell which can be written to only once.
   874→    ///
   875→    /// `OnceCell` provides `&` references to the contents without RAII guards.
   876→    ///
      →    …
   901→    pub struct OnceCell<T>(Imp<T>);
   904→        fn default …
   910→        fn fmt …
   919→        fn clone …
   926→        fn clone_from …
   935→        fn from …
   941→        fn eq …
   950→        pub const fn new …
   955→        pub const fn with_value …
   963→        pub fn get …
   993→        pub fn wait …
  1019→        pub fn get_mut …
  1031→        pub unsafe fn get_unchecked …
  1058→        pub fn set …
  1080→        pub fn try_insert …
  1115→        pub fn get_or_init …
  1152→        pub fn get_or_try_init …
  1197→        pub fn take …
  1217→        pub fn into_inner …
  1222→    /// A value which is initialized on the first access.
  1223→    ///
  1224→    /// This type is thread-safe and can be used in statics.
  1225→    ///
      →    …
  1255→    pub struct Lazy<T, F = fn() -> T> {
  1256→        cell: OnceCell<T>,
  1257→        init: Cell<Option<F>>,
  1258→    }
  1261→        fn fmt …
  1278→        pub const fn new …
  1285→        pub fn into_value …
  1308→        pub fn force …
  1327→        pub fn force_mut …
  1351→        pub fn get …
  1368→        pub fn get_mut …
  1374→        type Target = T;
  1375→        fn deref …
  1381→        fn deref_mut …
  1388→        fn default …
  1393→    /// ```compile_fail
      →    …
  1408→    fn _dummy() {}
  1411→#[cfg(feature = "race")]
  1412→pub mod race;

src/race.rs
    31→use core::sync::atomic;
    33→use portable_atomic as atomic;
    35→use atomic::{AtomicPtr, AtomicUsize, Ordering};
    36→use core::cell::UnsafeCell;
    37→use core::marker::PhantomData;
    38→use core::num::NonZeroUsize;
    39→use core::ptr;
    41→/// A thread-safe cell which can be written to only once.
    42→#[derive(Default, Debug)]
    43→pub struct OnceNonZeroUsize {
    44→    inner: AtomicUsize,
    45→}
    50→    pub const fn new …
    56→    pub fn get …
    68→    pub unsafe fn get_unchecked …
   107→    pub fn set …
   120→    pub fn get_or_init …
   138→    pub fn get_or_try_init …
   150→    fn init …
   160→    fn compare_exchange …
   165→/// A thread-safe cell which can be written to only once.
   166→#[derive(Default, Debug)]
   167→pub struct OnceBool {
   168→    inner: OnceNonZeroUsize,
   169→}
   174→    pub const fn new …
   180→    pub fn get …
   189→    pub fn set …
   199→    pub fn get_or_init …
   213→    pub fn get_or_try_init …
   221→    fn from_usize …
   226→    fn to_usize …
   231→/// A thread-safe cell which can be written to only once.
   232→pub struct OnceRef<'a, T> {
   233→    inner: AtomicPtr<T>,
   234→    ghost: PhantomData<UnsafeCell<&'a T>>,
   235→}
   241→    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result {
   247→    fn default() -> Self {
   254→    pub const fn new …
   259→    pub fn get …
   268→    pub fn set …
   281→    pub fn get_or_init …
   299→    pub fn get_or_try_init …
   311→    fn init …
   320→    fn compare_exchange …
   347→    fn _dummy …
   351→pub use self::once_box::OnceBox;
   353→#[cfg(feature = "alloc")]
   354→mod once_box {
   355→    use super::atomic::{AtomicPtr, Ordering};
   356→    use core::{marker::PhantomData, ptr};
   358→    use alloc::boxed::Box;
   360→    /// A thread-safe cell which can be written to only once.
   361→    pub struct OnceBox<T> {
   362→        inner: AtomicPtr<T>,
   363→        ghost: PhantomData<Option<Box<T>>>,
   364→    }
   367→        fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result {
   373→        fn default() -> Self {
   379→        fn drop(&mut self) {
   389→        pub const fn new …
   394→        pub fn with_value …
   399→        pub fn get …
   411→        pub fn set …
   432→        pub fn get_or_init …
   450→        pub fn get_or_try_init …
   462→        fn init …
   482→        fn clone(&self) -> Self {
   497→    fn _dummy …

tests/it/race.rs
     2→use std::sync::Barrier;

tests/it/race_once_box.rs
     2→use std::sync::Barrier;
    11→struct Heap {
    16→struct Pebble<T> {
    22→    fn drop(&mut self) {

tests/it/sync_lazy.rs
   163→fn arrrrrrrrrrrrrrrrrrrrrr() {

tests/it/sync_once_cell.rs
     7→use std::sync::Barrier;
    10→use core::cell::Cell;
   181→fn reentrant_init() {
   296→fn arrrrrrrrrrrrrrrrrrrrrr() {

xtask/Cargo.toml
     1→[package]
     8→[dependencies]

xtask/src/main.rs
     4→use std::time::Instant;
     6→use xshell::{cmd, Shell};
     8→fn main …
   116→fn push_toolchain …
   126→fn section …
   136→fn defer …

xtask/src/tidy.rs
     1→use xshell::{cmd, Shell};
