tests/snapshots/snapshots__budget_once_cell_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 3 → level 0 (5 words)

imp_cs.rs
imp_pl.rs
imp_std.rs
lib.rs
race.rs
