tests/snapshots/snapshots__budget_once_cell_root_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 15 → level 0 (9 words)

CHANGELOG.md
README.md
src/imp_cs.rs
src/imp_pl.rs
src/imp_std.rs
src/lib.rs
src/race.rs
xtask/src/main.rs
xtask/src/tidy.rs
